--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <body>
   <div id="app-container">
     <div id="sidebar">
-      <h1>Peta Kesesuaian Lahan Desa/Kelurahan Provinsi Sumatera Utara</h1>
+      <h1>Peta Kesesuaian Lahan Desa/Kelurahan Provinsi Sumatera Utara rev 1</h1>
 
       <div class="search-section">
         <h2>Pilih Kabupaten / Kota</h2>
@@ -565,7 +565,7 @@
 
             const content = `
               <h3>${safeValue(props['NAMOBJ'])}</h3>
-              <h4>${suitabilityLabel} <span class="suitability-indicator ${suitabilityClassCSS}">${suitabilityClass}</span></h4>
+              <h4>${suitabilityLabel}</h4>
               <hr>
               <table class="popup-table">
                 <tr><td>Nama Kecamatan</td><td>: ${safeValue(props['WADMKC'])}</td></tr>
